--- a/our-experts.html
+++ b/our-experts.html
@@ -21,9 +21,13 @@
     margin-right: auto;
     left: 0;
     right: 0;
-    top: 50%;
+    top: 17em;
     width: 50%;
     background-color: rgba(255,255,255,0.8);
+    text-align: center;
+    padding: 2% 7%;
+    font-size: 50px;
+    margin-bottom: 0;
 }
     
 #title h1 {
@@ -31,6 +35,7 @@
     font-family: 'Libre Baskerville', serif;
     color: #333;
     font-style: italic;
+    font-size: 25px
 }
 
     
